@@ -1,4 +1,5 @@
 1.2.2 - TBD
+    * Added --verbose launcher command-line option
     * Fixed error causing the launcher to crash when running in headless mode
       if the launcher GUI had not previously been run
     * The launcher (v1.7.0) now ignores older releases if a newer version
